--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+
+//    implementation 'com.android.support:recyclerview-v7:26.0.0'
+//    implementation 'com.android.support:design:26.0.0'
+//    implementation 'com.android.support:appcompat-v4:26.0.0'
 
     api project(":ipc")
 }
